~MINOR CHANGES MADE~
-> just some small changes to PlatformIO project

--- a/glove_software/GloveController/platformio.ini
+++ b/glove_software/GloveController/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
