--- a/glove_software/GloveController/.vscode/launch.json
+++ b/glove_software/GloveController/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/zkrastev/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
+            "executable": "c:/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
             "projectEnvName": "az-delivery-devkit-v4",
-            "toolchainBinDir": "/home/zkrastev/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/zykra/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/zkrastev/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
+            "executable": "c:/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
             "projectEnvName": "az-delivery-devkit-v4",
-            "toolchainBinDir": "/home/zkrastev/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/zykra/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/zkrastev/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
+            "executable": "c:/University/user-interfaces-ss22/glove_software/GloveController/.pio/build/az-delivery-devkit-v4/firmware.elf",
             "projectEnvName": "az-delivery-devkit-v4",
-            "toolchainBinDir": "/home/zkrastev/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/zykra/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
