--- a/glove_software/GloveController/platformio.ini
+++ b/glove_software/GloveController/platformio.ini
@@ -13,3 +13,8 @@ platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit BusIO@^1.11.6
+	adafruit/Adafruit Unified Sensor@^1.1.5
+	adafruit/Adafruit MPU6050@^2.2.0
+	jonniezg/EWMA@^1.0.2
