Cleanup rlbot config files

--- a/src/main/resources/gloveAppearance.cfg
+++ b/src/main/resources/gloveAppearance.cfg
@@ -1,3 +1,7 @@
+# ----------------------------------------------------------------------------------------------------------------------
+# Determines how our bot will look like ingame
+# ----------------------------------------------------------------------------------------------------------------------
+
 [Bot Loadout]
 # Primary Color selection
 team_color_id = 9
@@ -63,37 +67,21 @@ primary_color_lookup = None
 secondary_color_lookup = None
 
 [Bot Paint Blue]
-# car_paint_id
 car_paint_id = 8
-# decal_paint_id
 decal_paint_id = 8
-# wheels_paint_id
 wheels_paint_id = 8
-# boost_paint_id
 boost_paint_id = 8
-# antenna_paint_id
 antenna_paint_id = 8
-# hat_paint_id
 hat_paint_id = 8
-# trails_paint_id
 trails_paint_id = 8
-# goal_explosion_paint_id
 goal_explosion_paint_id = 8
 
 [Bot Paint Orange]
-# car_paint_id
 car_paint_id = 6
-# decal_paint_id
 decal_paint_id = 6
-# wheels_paint_id
 wheels_paint_id = 6
-# boost_paint_id
 boost_paint_id = 6
-# antenna_paint_id
 antenna_paint_id = 6
-# hat_paint_id
 hat_paint_id = 6
-# trails_paint_id
 trails_paint_id = 6
-# goal_explosion_paint_id
 goal_explosion_paint_id = 6
