--- a/src/main/resources/gloveBot.cfg
+++ b/src/main/resources/gloveBot.cfg
@@ -1,39 +1,32 @@
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------------------------------------
+# Configures details about our bot and how the framework will connect to it
 # https://github.com/RLBot/RLBot/wiki/Config-File-Documentation
-# ------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------------------------------------
 
 [Locations]
 # Path to loadout config from runner
 looks_config = gloveAppearance.cfg
-
 # Path to module from runner
 python_file = gloveBot.py
-
 # Logo displayed in RLBotGUI
 logo_file = logo.jpg
-
 # Name that will be displayed in game
 name = GloveCar
-
 # Indicates whether your bot can handle the early start system. Read below for details.
 supports_early_start = False
 
 [Bot Parameters]
-java_executable_path = ""
+java_executable_path = None
 
 [Details]
 # These values are optional but useful metadata for helper programs
 # Name of the bot's creator/developer
 developer = Krastev Zhivko, Wiesner Manuel, Wilhelmer Jonathan
-
 # Short description of the bot
 description = Controls the car with a glove!
-
 # Fun fact about the bot
 fun_fact = We always use gloves.
-
 # Link to github repository
 github = https://github.com/manuelwiesner/user-interfaces-ss22
-
 # Programming language
 language = Kotlin/Java
