--- a/src/main/resources/opponentBot.cfg
+++ b/src/main/resources/opponentBot.cfg
@@ -1,3 +1,7 @@
+# ----------------------------------------------------------------------------------------------------------------------
+# The opponent is a psyonix made bot and doesn't need a config, but we can still name and style it
+# ----------------------------------------------------------------------------------------------------------------------
+
 [Locations]
 looks_config = gloveAppearance.cfg
 name = BotCar
