Code should work now - will test it
I know kinda messy but will fix it later on

--- a/glove_software/GloveController/platformio.ini
+++ b/glove_software/GloveController/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.5
 	adafruit/Adafruit MPU6050@^2.2.0
 	jonniezg/EWMA@^1.0.2
+	rfetick/MPU6050_light@^1.1.0
